# Metacrafters-Assesment

./: README.md
AI/chatbot/: .env  package.json
AI/chatbot/src/: App.jsx
Avax/Avalanche Subnet/contracts/: ERC20.sol
Avax/Degen/: README.md
Avax/Degen/contracts/: DegenToken.sol
Avax/HyperSDK/.token-cli/: MANIFEST-000030  MANIFEST-000033
Avax/practice/: package.json
Flow Blockchain/Access Control/: access.contract.cdc  access.scripts.cdc
Flow Blockchain/Structs/: README.md  flow.json  stake.contract.cdc  stake.scripts.cdc  stake.transactions.cdc
Flow Blockchain/TokenSwap/: .gitignore  README.md  flow.json
Javascript/: nft.js
Polygon/polygon-bridge/: README.md
Polygon/zk-circuit-implementation/: hardhat.config.ts
Solana/Airdrop/: Anchor.toml  README.md
Solana/Counter/: Anchor.toml
Solana/Helloworld/: package.json
Solana/NFT-Program/: Anchor.toml  README.md
Solana/Senddit/: README.md
Solana/Staking Project/: Anchor.toml  README.md
Solana/calculator/: README.md
Solana/candy/: cache.json  config.json  main.js  wallet.json
Solana/counter project/: README.md
Solana/js-solana/: package.json
Solana/portfolio/: README.md
Solana/solana_calculator/: Cargo.toml
Solana/trust_fund/: .gitignore  Anchor.toml  Cargo.toml  README.md
Solana/trust_fund/programs/diamond_hands/: Cargo.toml
Solidity/BazuToken/: README.md
Solidity/Erros/: README.md  errors.sol
Solidity/Security/: README.md
Solidity/Token/: Bazu.sol  README.md
Solidity/vesting/: README.md  hardhat.config.js
client-bazutoken/: package-lock.json  package.json
(+71 files in other folders)
